# claude-plugins

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  article-part2-v3.md  documentation-architect.skill  fly.toml  knowledge-mcp-implementation-plan.md  knowledge-mcp-storage-options.md  marketplace.json  skill-creator.skill  specification-refiner-improvement-analysis.md  specification-refiner.skill  speckit-generator.skill
.claude-plugin/: marketplace.json
mcps/knowledge-mcp/: .coverage.Mac_lan.pid44203.XjLY8iEx.HNQIp837rWOh  .env.example  .gitignore  CLAUDE.md  README.md  manifest.json  pyproject.toml
mcps/knowledge-mcp/.claude-plugin/: plugin.json
mcps/knowledge-mcp/.claude/commands/: analyze.md  implement.md  plan.md  revert.md
mcps/knowledge-mcp/.claude/memory/: constitution.md  documentation.md  project-status.md  python.md  security.md
mcps/knowledge-mcp/.github/workflows/: ci.yml  security.yml
mcps/knowledge-mcp/.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
mcps/knowledge-mcp/.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  INTEGRATIONS.md  TESTING.md
mcps/knowledge-mcp/.planning/phases/01-core-acquisition/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-07-PLAN.md  01-07-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-UAT.md
mcps/knowledge-mcp/.planning/phases/02-document-ingestion/: 02-CONTEXT.md  02-RESEARCH.md  VERIFICATION.md
mcps/knowledge-mcp/.planning/phases/02-search-layer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-RESEARCH.md  VERIFICATION.md
mcps/knowledge-mcp/.planning/phases/02-workflow-support/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-07-PLAN.md  02-07-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
mcps/knowledge-mcp/.planning/phases/03-feedback-scoring/: 03-CONTEXT.md
mcps/knowledge-mcp/.planning/phases/03-mcp-tool-implementation/: 03-RESEARCH.md
mcps/knowledge-mcp/.planning/phases/03-mcp-tools/: 03-01-PLAN.md  03-01-SUMMARY.md  03-01-VERIFICATION.md
mcps/knowledge-mcp/.planning/phases/04-production-readiness/: 04-01-SUMMARY.md  04-RESEARCH.md
mcps/knowledge-mcp/.planning/phases/04-test-coverage/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
mcps/knowledge-mcp/.planning/phases/05-extended-features/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-04-PLAN.md  05-04-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-UAT.md
mcps/knowledge-mcp/.planning/phases/05-production-integration/: 05-01-SUMMARY.md  05-02-SUMMARY.md  05-VERIFICATION.md
mcps/knowledge-mcp/.planning/research/: ARCHITECTURE.md  PITFALLS.md  crawl4ai.md  gap-analysis.md  postgresql-rls.md  sqlalchemy-async.md
mcps/knowledge-mcp/data/: golden_queries.yml
mcps/knowledge-mcp/docs/how-to/: ingest-standards.md
mcps/knowledge-mcp/docs/standards-acquisition/: aiag-vda-2019.md  iso-9001-2015.md  mil-std-882e.md
mcps/knowledge-mcp/docs/tutorials/: README.md
mcps/knowledge-mcp/scripts/: package_mcpb.sh  validate_ingestion.py  verify_phase3.py
mcps/knowledge-mcp/src/knowledge_mcp/: __init__.py  __main__.py  exceptions.py  server.py
mcps/knowledge-mcp/src/knowledge_mcp/chunk/: __init__.py  base.py  hierarchical.py
mcps/knowledge-mcp/src/knowledge_mcp/cli/: __init__.py  ingest.py  main.py  token_summary.py  validate.py  verify.py
mcps/knowledge-mcp/src/knowledge_mcp/db/: __init__.py  engine.py  models.py  repositories.py
mcps/knowledge-mcp/src/knowledge_mcp/embed/: __init__.py  base.py  cache.py  local_embedder.py  openai_embedder.py
mcps/knowledge-mcp/src/knowledge_mcp/evaluation/: __init__.py  golden_set.py  metrics.py  reporter.py
mcps/knowledge-mcp/src/knowledge_mcp/ingest/: __init__.py  base.py  docx_ingestor.py  pdf_ingestor.py  pipeline.py  web_ingestor.py
mcps/knowledge-mcp/src/knowledge_mcp/models/: __init__.py  chunk.py  document.py
mcps/knowledge-mcp/src/knowledge_mcp/monitoring/: __init__.py  logger.py  token_tracker.py
mcps/knowledge-mcp/src/knowledge_mcp/search/: __init__.py  bm25.py  citation.py  coverage.py  hybrid.py  models.py  reranker.py  semantic_search.py  workflow_search.py
mcps/knowledge-mcp/src/knowledge_mcp/store/: __init__.py  chromadb_store.py  qdrant_store.py
mcps/knowledge-mcp/src/knowledge_mcp/sync/: __init__.py  offline.py
mcps/knowledge-mcp/src/knowledge_mcp/tools/: __init__.py  acquisition.py  workflows.py
mcps/knowledge-mcp/src/knowledge_mcp/utils/: __init__.py  config.py  hashing.py  normative.py  tokenizer.py
mcps/knowledge-mcp/src/knowledge_mcp/validation/: __init__.py  critical_tables.py  reports.py  table_validator.py
mcps/knowledge-mcp/tests/: conftest.py
mcps/knowledge-mcp/tests/evaluation/: test_golden_set.py
mcps/knowledge-mcp/tests/integration/: __init__.py  test_acquisition_tools.py  test_database.py  test_embedder_integration.py  test_end_to_end.py  test_fallback.py  test_hybrid_search.py  test_ingestion.py  test_mcp_tools.py  test_workflow_tools.py
mcps/knowledge-mcp/tests/unit/: test_config.py  test_embed_cache.py  test_main.py  test_monitoring.py  test_server.py
mcps/knowledge-mcp/tests/unit/test_chunk/: test_hierarchical.py
mcps/knowledge-mcp/tests/unit/test_cli/: __init__.py  test_ingest.py  test_validate.py  test_verify.py
mcps/knowledge-mcp/tests/unit/test_db/: test_engine.py  test_models.py  test_repositories.py
mcps/knowledge-mcp/tests/unit/test_embed/: __init__.py  test_local_embedder.py  test_openai_embedder.py
mcps/knowledge-mcp/tests/unit/test_ingest/: __init__.py  test_docx_ingestor.py  test_pdf_ingestor.py  test_pipeline.py  test_web_ingestor.py
mcps/knowledge-mcp/tests/unit/test_models/: __init__.py  test_chunk.py
(+1006 files in other folders)
